[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_left = 242.0
margin_top = 216.0
margin_right = 270.0
margin_bottom = 230.0
size_flags_horizontal = 4
text = "Title"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 88.0
margin_top = 260.0
margin_right = 423.0
margin_bottom = 324.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 64.0

[node name="IPJoin" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
align = 1
placeholder_text = "IP Address"

[node name="PortJoin" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 30 )
align = 1
placeholder_text = "Port"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 335.0
margin_bottom = 64.0
rect_min_size = Vector2( 30, 30 )
text = "Join"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 85.0
margin_top = 354.0
margin_right = 427.0
margin_bottom = 384.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 30.0

[node name="IPHost" type="LineEdit" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
visible = false
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
align = 1
placeholder_text = "IP Address"

[node name="PortHost" type="LineEdit" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
align = 1
placeholder_text = "Port"

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 300.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "Host"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer2"]
margin_top = 32.0
margin_right = 512.0
margin_bottom = 544.0
rect_min_size = Vector2( 512, 512 )
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 544.0
margin_right = 512.0
margin_bottom = 568.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer"]
margin_left = 32.0
margin_right = 432.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )

[node name="Send" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_left = 436.0
margin_right = 479.0
margin_bottom = 24.0
text = "Send"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/Send" to="." method="_on_Send_pressed"]
